--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>CalculadoraIMC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculadora IMC</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="../src/app/img/salud.png" type="image/x-icon">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  <header>
+    <section class="info-header">
+      <h1>Calcula tu IMC</h1>
+      <h2>Obtén mas información de interés a través de la sección conoce más en nuestra barra de navegación
+      </h2>
+    </section>
+  </header>
+  <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+      style="height: 100%; width: 100%;">
+      <path d="M-17.77,59.70 C139.67,148.52 364.27,-48.84 500.84,66.61 L500.00,150.00 L0.00,150.00 Z"
+        style="stroke: none; fill: #fff;"></path>
+    </svg></div>
   <app-root></app-root>
 </body>
+
 </html>
